Changes for possible fix on mobile chrome - 3

--- a/docs/assets/static/pio.css
+++ b/docs/assets/static/pio.css
@@ -87,7 +87,7 @@
 
 #pio{ vertical-align: middle }
 
-@media screen and (max-width: 768px){
+@media screen{
     #pio{ width: 8em }
     .pio-container{ pointer-events: none }
 }
